# pwsh-git-complete

./: README.md  complete.ps1  hello.py  pyproject.toml
pwsh_git/: __main__.py  main.py
