[project]
name = "pwsh-git-complete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pwsh_git.*", "pwsh_git"]
exclude = ["tests"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=5.1.1",
]
